3rdparty/libprocess/include/process/process.hpp
@@ -418,7 +418,11 @@ private:
   std::atomic<bool> termination = ATOMIC_VAR_INIT(false);
 
   // Enqueue the specified message, request, or function call.
-  void enqueue(Event* event);
+  // Returns false if not enqueued (i.e. the process is terminating).
+  // In this case the caller retains ownership of the event.
+  // Should not be called directly, callers should go through
+  // `ProcessManager::deliver(...)`.
+  bool enqueue(Event* event);
 
   // Delegates for messages.
   std::map<std::string, UPID> delegates;
